[gd_scene load_steps=24 format=3 uid="uid://b52w718lkr44x"]

[ext_resource type="Texture2D" uid="uid://dvuvserywq10j" path="res://Assets/Images/UI Images/Gameplay/comboBG.png" id="1_bdtso"]
[ext_resource type="Script" uid="uid://cb3eper42xmt1" path="res://Scripts/GameAssets/Gameplay/combo_counter.gd" id="1_oxo8g"]
[ext_resource type="FontFile" uid="uid://d4kb6nf34gjix" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_bdtso"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xpndr"]
atlas = ExtResource("1_bdtso")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76l1e"]
atlas = ExtResource("1_bdtso")
region = Rect2(33, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jv4a"]
atlas = ExtResource("1_bdtso")
region = Rect2(66, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbkds"]
atlas = ExtResource("1_bdtso")
region = Rect2(99, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wj7o"]
atlas = ExtResource("1_bdtso")
region = Rect2(99, 33, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxo8g"]
atlas = ExtResource("1_bdtso")
region = Rect2(0, 33, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36tvr"]
atlas = ExtResource("1_bdtso")
region = Rect2(33, 33, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nwfc"]
atlas = ExtResource("1_bdtso")
region = Rect2(66, 33, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bdtso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpndr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76l1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jv4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbkds")
}],
"loop": false,
"name": &"RunnerTrans",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wj7o")
}],
"loop": false,
"name": &"Rythm",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxo8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36tvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nwfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wj7o")
}],
"loop": false,
"name": &"RythmTrans",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_36tvr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ComboValue:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/ComboLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/ComboValue:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/ComboLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, 2)]
}

[sub_resource type="Animation" id="Animation_oxo8g"]
resource_name = "changeValue"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ComboValue:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(0.25, 0.210224, 0.164939, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1.1, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/ComboLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(0.25, 0.210224, 0.164939, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1.1, 0.8), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/ComboValue:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/ComboLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, 2)]
}

[sub_resource type="Animation" id="Animation_0tvio"]
resource_name = "changeValueRunner"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ComboValue:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(0.25, 0.210224, 0.164939, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.6, 0.8), Vector2(0.7, 0.6), Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/ComboLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(0.25, 0.210224, 0.164939, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(0.6, 0.8), Vector2(0.7, 0.6), Vector2(0.8, 0.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/ComboValue:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/ComboLabel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, 12)]
}

[sub_resource type="Animation" id="Animation_4jv4a"]
resource_name = "runnerToRythm"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ComboValue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(-8, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/ComboLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 0.25),
"update": 0,
"values": [Vector2(-7, 12), Vector2(-20, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/ComboValue:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.210224, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/ComboLabel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.210224, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_76l1e"]
resource_name = "rythmToRunner"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/ComboValue:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(-8, -8), Vector2(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/ComboLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(-20, 2), Vector2(-7, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/ComboValue:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.210224, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/ComboLabel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.210224, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_36tvr"]
_data = {
&"RESET": SubResource("Animation_36tvr"),
&"changeValue": SubResource("Animation_oxo8g"),
&"changeValueRunner": SubResource("Animation_0tvio"),
&"runnerToRythm": SubResource("Animation_4jv4a"),
&"rythmToRunner": SubResource("Animation_76l1e")
}

[sub_resource type="Animation" id="Animation_8wj7o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_xpndr"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(0.196146, 0.307786, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(6, 6), Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_3nwfc"]
resource_name = "bop"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(0.258816, 0.241484, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(5.5, 5.5), Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_rbkds"]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(0.196146, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(6, 6), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wj7o"]
_data = {
&"RESET": SubResource("Animation_8wj7o"),
&"appear": SubResource("Animation_xpndr"),
&"bop": SubResource("Animation_3nwfc"),
&"disappear": SubResource("Animation_rbkds")
}

[node name="ComboCounter" type="MarginContainer"]
script = ExtResource("1_oxo8g")

[node name="Background" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_bdtso")
animation = &"RythmTrans"
frame = 3
frame_progress = 1.0

[node name="ComboValue" type="Label" parent="Background"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(8, 4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_bdtso")
theme_override_font_sizes/font_size = 8
text = "35"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="Background"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -4.0
offset_right = 17.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_bdtso")
theme_override_font_sizes/font_size = 8
text = "Combo"
horizontal_alignment = 1

[node name="TextAnim" type="AnimationPlayer" parent="Background"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_36tvr")
}

[node name="bopAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8wj7o")
}

[connection signal="animation_finished" from="bopAnim" to="." method="_on_bop_anim_animation_finished"]
